--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "moray": "git+ssh://git@github.com:joyent/node-moray.git#b84ef0e",
     "nodeunit": "0.9.1",
     "restify": "2.7.0",
-    "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#c962959",
+    "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#ad24d7f",
     "sigyan": "0.2.0",
     "sprintf": "0.1.1",
     "trace-event": "1.3.0",
@@ -29,6 +29,8 @@
     "vm-agent": ">=1.5.0"
   },
   "devDependencies": {
+    "clone": "^1.0.2",
+    "dashdash": "1.10.1",
     "tap": "*"
   },
   "scripts": {
