DOCKER-863: Create shared volume when mounting nonexistent volume
This change brings support for creating NFS shared volumes required by a
given Docker container from its VMAPI start workflow. This is how
sdc-docker handles mounting non-existent volumes when they're mounted
by users with docker commands of the following form:

docker run -it -v non-existent-volume:/foo busybox /bin/sh

--- a/tools/jsl.node.conf
+++ b/tools/jsl.node.conf
@@ -137,6 +137,7 @@
 +define sapiUrl
 +define vmapiUrl
 +define urlModule
++define volapiUrl
 
 ### JavaScript Version
 # To change the default JavaScript version:
