--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodeunit": "0.9.1",
     "once": "^1.3.3",
     "restify": "2.7.0",
+    "restify-plugins": "^1.0.3",
     "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#c962959",
     "sigyan": "0.2.0",
     "sprintf": "0.1.1",
