--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "assert-plus": "0.2.0",
     "async": "0.2.6",
+    "backoff": "2.5.0",
     "bunyan": "1.3.4",
     "changefeed": "1.1.8",
+    "dashdash": "1.14.0",
     "deep-diff": "0.3.3",
     "effluent-logger": "git+https://github.com/joshwilsdon/effluent-logger.git#d662f161a07f94045ad2afb45442931511c40e51",
     "filed": "0.0.5",
@@ -19,13 +21,14 @@
     "nodeunit": "0.9.1",
     "once": "^1.3.3",
     "restify": "2.7.0",
-    "sdc-clients": "git+https://github.com/joyent/node-sdc-clients.git#c962959",
+    "sdc-clients": "git+https://github.com/joyent/node-sdc-clients.git#09ab686d8009503b8a9ccc8947a617d80c038bc8",
     "sigyan": "0.2.0",
     "sprintf": "0.1.1",
     "strsplit": "1.0.0",
     "trace-event": "1.3.0",
     "vasync": "^1.6.3",
-    "wf-client": "git+https://github.com/joyent/sdc-wf-client.git#469fc74"
+    "wf-client": "git+https://github.com/joyent/sdc-wf-client.git#469fc74",
+    "verror": "1.8.1"
   },
   "sdcDependencies": {
     "vm-agent": ">=1.5.0"
