--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vmapi",
   "description": "VMs API",
-  "version": "9.0.0",
+  "version": "9.1.0",
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
@@ -27,7 +27,8 @@
     "trace-event": "1.3.0",
     "triton-tags": "^1.1.4",
     "vasync": "^1.6.3",
-    "wf-client": "0.2.1"
+    "wf-client": "0.2.1",
+    "verror": "1.8.1"
   },
   "sdcDependencies": {
     "vm-agent": ">=1.5.0"
