--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "nodeunit": "0.9.1",
     "once": "^1.3.3",
     "restify": "4.2.0",
-    "sdc-clients": "10.0.3",
+    "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#94571bb1f13b0f2fbcbbd3d1625b12b35be988ec",
     "sigyan": "0.2.0",
     "sprintf": "0.1.1",
     "strsplit": "1.0.0",
