--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsprim": "^1.2.2",
     "ldap-filter": "0.3.3",
     "libuuid": "0.2.1",
-    "moray": "git+https://github.com/joyent/node-moray.git#fd5781bc25a9bfe2ba82167664639753fb9f0ca5",
+    "moray": "git+https://github.com/joyent/node-moray.git#MORAY-104",
     "nodeunit": "0.9.1",
     "once": "^1.3.3",
     "restify": "4.3.0",
